--- a/config/database.yml
+++ b/config/database.yml
@@ -10,7 +10,7 @@
 #       Install PostgreSQL and put its /bin directory on your path.
 development:
   adapter: postgresql
-  encoding: unicode
+  encoding: utf8
   database: cobook_development
   pool: 5
   username: cobook
@@ -36,7 +36,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: postgresql
-  encoding: unicode
+  encoding: utf8
   database: cobook_test
   pool: 5
   username: cobook
@@ -44,7 +44,7 @@ test:
 
 production:
   adapter: postgresql
-  encoding: unicode
+  encoding: utf8
   database: haha_production
   pool: 5
   username: cobook
